fix-open: try fix open on mobile

--- a/components/CommonLinks/CommonLinks.module.css
+++ b/components/CommonLinks/CommonLinks.module.css
@@ -1,6 +1,6 @@
 .CommonLinks__container {
     position: fixed;
-    display: flex;
+    display: none;
     align-items: center;
     border-radius: 64px;
     width: 100vw;
@@ -16,8 +16,9 @@
     display: none;
 }
 
-.hidden {
-    display: none;
+.open {
+    display: flex !important;
+    flex-direction: row !important;
 }
 
 .CommonLinks__text_main {
